# docker-postgres

./: .gitignore  Dockerfile.postgres  Makefile  README.md  pyproject.toml
maintenance/: createreaduser
postgis/11/: Dockerfile
postgis/12/: Dockerfile
postgis/13/: Dockerfile
postgis/14/: Dockerfile
postgres/10/: Dockerfile
postgres/12/: Dockerfile
postgres/13/: Dockerfile
postgres/14/: Dockerfile
postgres/15/: Dockerfile
postgres/16/: Dockerfile
tests/: test_postgres.py
